@@ -59,6 +59,11 @@ prefs = {
     'vertical flip': False,
     'horizontal flip': False,
     'keep transformation': False,
+    'brightness': 1.0,
+    'contrast': 1.0,
+    'saturation': 1.0,
+    'sharpness': 1.0,
+    'auto contrast': False,
     'max pages to cache': 7,
     'window height': 600,
     'window width': 500,
